[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Character/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://Character/Character.gd" type="Script" id=4]
[ext_resource path="res://Character/States/Move.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -0.5, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="States" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 3 )

[node name="Move" type="Node2D" parent="States"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.174533
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/move = SubResource( 2 )
[connection signal="entered_idle_state" from="States/Idle" to="." method="_on_Idle_entered_idle_state"]
[connection signal="changed_axis" from="States/Move" to="." method="_on_Move_changed_axis"]
[connection signal="entered_move_state" from="States/Move" to="." method="_on_Move_entered_move_state"]
